# lldap-with-kerberos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  entrypoint.sh  flake.nix  prepare-release.sh  schema.graphql  start-lldap.sh
app/: Cargo.toml
app/queries/: change_group_ou.graphql  change_user_ou.graphql  create_group.graphql  create_ou.graphql  create_user_attribute.graphql  delete_ou.graphql  export_keytab.graphql  get_group_attributes_schema.graphql  get_group_details.graphql  get_group_list.graphql  get_posix_config.graphql  get_user_attributes_schema.graphql  get_user_details.graphql  list_ous.graphql  list_user_ous.graphql  list_users.graphql  push_realm_to_keycloak.graphql  reassign_gid_numbers.graphql  reassign_uid_numbers.graphql  reassign_user_gid_numbers.graphql  reassign_user_homedirectories.graphql  reassign_user_loginshells.graphql  reassign_user_uid_numbers.graphql  set_posix_config.graphql  test_keycloak_connection.graphql
app/src/: lib.rs
app/src/components/: .create_user_ou.rs.kate-swp  add_group_member.rs  app.rs  avatar.rs  banner.rs  change_group_ou.rs  change_ou.rs  change_password.rs  change_user_ou.rs  create_group.rs  create_group_attribute.rs  create_ou.rs  create_user.rs  create_user_attribute.rs  create_user_ou.rs  delete_group.rs  delete_group_attribute.rs  delete_ou.rs  delete_user.rs  delete_user_attribute.rs  delete_user_ou.rs  federation.rs  group_details.rs  group_details_form.rs  group_schema_table.rs  group_table.rs  kerberos.rs  kerberos_switch.rs  keycloak_settings.rs  login.rs  mod.rs  ou_selector.rs  ou_table.rs  posix_options.rs  reset_password_step2.rs  router.rs  search.rs  status_modal.rs  table_action_bar.rs  table_bulk_selection.rs  (+5 more)
app/src/components/form/: attribute_input.rs  file_input.rs
app/src/components/fragments/: attribute_schema.rs
app/src/infra/: api.rs  attributes.rs  common_component.rs  encrypt.rs  form_utils.rs  graphql.rs  mod.rs  obfuscate.rs  schema.rs
app/src/queries/: create_service_principal.graphql  get_kerberos_info.graphql  keycloak_config.graphql  keycloak_suggested_config.graphql  push_realm_to_keycloak.graphql  save_keycloak_config.graphql  sync_kerberos.graphql  sync_kerberos_password.graphql
crates/access-control/: Cargo.toml
crates/access-control/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  opaque.rs
crates/domain/: .Cargo.toml.kate-swp  Cargo.toml
crates/domain-handlers/: Cargo.toml
crates/domain-handlers/src/: handler.rs  lib.rs
crates/domain-model/: Cargo.toml
crates/domain-model/src/: lib.rs
crates/domain-model/src/model/: deserialize.rs  group_attribute_schema.rs  groups.rs  mod.rs  system_config.rs  user_attribute_schema.rs  users.rs
crates/domain/src/: .types.rs.kate-swp  deserialize.rs  images.rs  lib.rs  public_schema.rs  schema.rs  types.rs
crates/frontend-options/src/: lib.rs
crates/graphql-server/: Cargo.toml
crates/graphql-server/src/: api.rs  lib.rs
crates/graphql-server/src/mutation/: .mod.rs.kate-swp  helpers.rs  inputs.rs  mod.rs  newhelper.rs
crates/graphql-server/src/query/: attribute.rs  filters.rs  group.rs  mod.rs  schema.rs  user.rs
crates/kerberos/: Cargo.toml  build.rs
crates/kerberos/src/: ffi.rs  keycloak_client.rs  keycloak_config.rs  lib.rs
crates/ldap/: Cargo.toml
crates/ldap/src/: .password.rs.kate-swp  attributes.rs  compare.rs  create.rs  delete.rs  dn.rs  handler.rs  lib.rs  modify.rs  password.rs  search.rs
crates/ldap/src/core/: error.rs  group.rs  user.rs  utils.rs
crates/ldap/src/schema/: definitions.rs  manager.rs  mod.rs
crates/ldap/src/search/: filters.rs  handler.rs  mod.rs  results.rs  root_dse.rs  scope.rs  subschema.rs
crates/opaque-handler/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  public_schema.rs  schema.rs
crates/sql-backend-handler/: Cargo.toml
crates/sql-backend-handler/src/: lib.rs  sql_backend_handler.rs  sql_group_backend_handler.rs  sql_migrations.rs  sql_opaque_handler.rs  sql_schema_backend_handler.rs  sql_tables.rs  sql_user_backend_handler.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/validation/src/: lib.rs
docker/: Dockerfile  docker-entrypoint.original.sh  entrypoint.sh  lldap_config.docker_template.toml  sudoers-lldap
docker/kerberos/: kdc.template.conf  kerberos-start  kerberos_config.template.toml  krb5.template.conf  start  start.sh  sync-kerberos-principal  sync-kerberos-principal.sh
docs/: SSSD_LDAP_Kerberos_Setup_Guide.md  architecture.md  faq.md  install.md
kerberos/: docker-compose.yml  kadm5.template.acl  kdc.template.conf  kerberos-start  kerberos_config.template.toml  keycloak_config.template.toml  krb5.template.conf  old-Dockerfile
migration-tool/: Cargo.toml
migration-tool/src/: ldap.rs  lldap.rs
server/: Cargo.toml
server/src/: auth_service.rs  cli.rs  configuration.rs  database_string.rs  db_cleaner.rs  graphql_server.rs  healthcheck.rs  jwt_sql_tables.rs  ldap_server.rs  logging.rs  mail.rs  main.rs  sql_tcp_backend_handler.rs  tcp_backend_handler.rs  tcp_server.rs  tls.rs
server/tests/: ldap.rs
server/tests/common/: fixture.rs  graphql.rs
server/tests/queries/: list_users.graphql
set-password/: Cargo.toml
set-password/src/: main.rs
