[package]
name = "lldap_migration_tool"
version = "0.4.3"
description = "CLI migration tool to go from OpenLDAP to LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
graphql_client = { workspace = true, features = ["graphql_query_derive", "reqwest-rustls"] }
ldap3 = { workspace = true, features = ["sync", "tls-rustls-ring"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking", "rustls-tls"] }
requestty = "0.6.3"
serde_json = { workspace = true }
smallvec = "*"

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.serde]
workspace = true
