[package]
name = "lldap_set_password"
version = "0.1.1"
description = "CLI tool to set a user password in LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = { workspace = true }

[dependencies.lldap_auth]
path = "../crates/auth"
features = ["opaque_client"]

[dependencies.serde]
workspace = true
