[package]
name = "lldap_domain"
version = "0.1.1"
authors = [
    "Valentin Tolmer <valentin@tolmer.fr>",
    "Simon Broeng Jensen <sbj@cwconsult.dk>",
]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = "1.9"
chrono = { workspace = true }
derive_more = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "bmp"] }
itertools = { workspace = true }
juniper = { workspace = true }
serde_bytes = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_schema]
path = "../schema"

[dependencies.sea-orm]
workspace = true
features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "sqlx-all",
    "runtime-actix-rustls",
]

[dependencies.serde]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
