[package]
name = "lldap-kerberos"
version = "0.2.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
lazy_static = "1.4.0"
lldap_domain = { path = "../domain" }
lldap_domain_handlers = { path = "../domain-handlers" }
minijinja = "2.0"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }
keycloak = "26.5.2"

[build-dependencies]
bindgen = { version = "0.69.4", features = ["runtime"] }
pkg-config = "0.3.30"

[[bin]]
name = "kerberos_manager"
path = "src/bin/kerberos_manager.rs"
