[package]
name = "lldap-kerberos"
version = "0.2.1"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
keycloak = "26.5.2"
lazy_static = "1.4.0"
lldap_domain = { path = "../domain" }
lldap_domain_handlers = { path = "../domain-handlers" }
minijinja = "2.0"
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rsa = "0.9.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
toml = "0.8"
tracing = { workspace = true }

[build-dependencies]
bindgen = { version = "0.69.4", features = ["runtime"] }
pkg-config = "0.3.30"

[[bin]]
name = "kerberos_manager"
path = "src/bin/kerberos_manager.rs"
