[package]
name = "lldap_ldap"
version = "0.2.2"
description = "LDAP operations support"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
ldap3_proto = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_opaque_handler]
path = "../opaque-handler"

[dependencies.lldap_schema]
path = "../schema"

[dependencies.lldap_sql_backend_handler]
path = "../sql-backend-handler"

[dependencies.lldap-kerberos]
path = "../kerberos"

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }

[dev-dependencies.lldap_domain]
path = "../domain"
features = ["test"]

[dev-dependencies.lldap_test_utils]
path = "../test-utils"

[dev-dependencies.tokio]
features = ["full"]
version = "1.25"
