[package]
name = "lldap_schema"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
juniper = { workspace = true }
sea-orm = { workspace = true, features = ["macros", "runtime-tokio-rustls"] }
sea-query = { version = "0.32", default-features = false, features = ["thread-safe"] }
serde = { workspace = true, features = ["derive", "std"] }
strum = { workspace = true }
